nginx/nginxdeploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: 457017831224.dkr.ecr.ap-northeast-1.amazonaws.com/dev-nginx
        name: nginx
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "500m"
      nodeSelector:
        app: nginx
